web/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-home-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-home
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-admin-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx-admin
