web/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-home-service
            port:
              number: 80
      - pathType: Prefix
        path: /admin
        backend:
          service:
            name: nginx-admin-service
            port:
              number: 80
